--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -50,10 +50,10 @@ a {
 	background: white;
 }
 .operate{
-	background: #eee;
-	width: 95%;
+	width: 100%;
 	height: 87%;
-    margin: 1% auto .5% auto;
+    margin: 1% 0 .5% 0;
+    top:10%;
 }
 .input .popup{
 	color: red;
@@ -184,7 +184,8 @@ a {
 }
 
 .main {
+	background: #eee;
     height: 100%;
-    width: 100%;
-    margin:0;
+    width: 95%;
+    margin:0 auto;
 }
