--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -175,19 +175,19 @@
     </div-->
     <li><a></a><span class="ui-icon ui-icon-close" role="presentation">Remove Tab</span></li>
     <div id="circuit" class="circuit">
-        <div class="column parts">
+        <div class="ui segment column parts">
             <div class="ui items">
             </div>
         </div>
-        <div class="column logic">
+        <div class="ui segment column logic">
             <div class="ui items"> 
             </div>
         </div>
-        <div class="column outputs">
+        <div class="ui segment column outputs">
             <div class="ui items"> 
             </div>
         </div>
-        <div class="column truthtable">
+        <div class="ui segment column truthtable">
             <table class="ui collapsing table segment">
                 <thead>
                     <tr>
