--- a/server/static/css/circuit.css
+++ b/server/static/css/circuit.css
@@ -48,12 +48,13 @@ body {
 #circuits .column.logic {
     width:25%;
     margin:0;
+    margin-left:20px;
     display:block;
 }
 
 #circuits .column.outputs {
     width:20%;
-    margin:0;
+    margin:0 20px;
 }
 
 #circuits .column.truthtable {
@@ -143,14 +144,14 @@ body {
 }
 
 #circuits .part {
-    height:50%;
-    width:100%;
+    height:48%;
+    width:90%;
     margin:5px 5px 5px 5px;
 }
 
 #circuits .part .left {
-    width:30%;
-    height:80%;
+    width:35%;
+    height:98%;
 }
 
 .part .left {
@@ -162,11 +163,12 @@ body {
     margin:10% 0;
     float:right;
     height:80%;
-    width:60%;
+    width:50%;
 }
 
 .part .left .row {
     margin:0;
+    height:50%;
 }
 
 /* logic */
