--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -46,6 +46,8 @@
             Design Frame
         </div>
         <div class="content">
+            <div class="ui items" id="logiclist">
+            </div>
         </div>
     </div>
 </div>
@@ -72,6 +74,10 @@
                 <img class="ui small image element" name="input" src="../static/images/circuit/input.png">
             </div>
         </div>
+    </div>
+    <div class="item logic">
+        <img class="ui small image element" name="logic" src="../static/images/circuit/and.png">
+        XXXXX
     </div>
     <div class="item biobrick">
         <img class="ui small image element">
