--- a/server/templates/vector.html
+++ b/server/templates/vector.html
@@ -143,5 +143,6 @@
 <script src="../static/js/graphiti/decoration/connection/TDecorator.js"></script>
 <!--custom js-->
 <script src="../static/js/vector-view.js"></script>
+<!--script src="../static/js/Chart.min.js"></script-->
 <script src="../static/js/vector-controller.js"></script>
 {%endblock script %}
