--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -53,17 +53,17 @@
 </div>
 <div id="template">
     <div class="item logiccontainer">
-        select a logic gate
+        <b>drag a logic here</b>
     </div>
     <div class="ui items" id="biolist">
     </div>
     <div class="item part" name="part">
         <div class="left">
-            <div class="ui segment row">
+            <div class="ui segment">
                 <div class="ui bottom attached label">receptor</div>
                 <img class="ui small image element" name="receptor" src="../static/images/circuit/receptor.png">
             </div>
-            <div class="ui segment row">
+            <div class="ui segment">
                 <div class="ui bottom attached label">promoter</div>
                 <img class="ui small image element" name="promoter" src="../static/images/circuit/promoter.png">
             </div>
