--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -31,7 +31,12 @@
                     Complete
                 </div>
             </div>
-            <div id="inputpart"></div>
+            <div id="inputpart">
+                <div class="ui icon input search">
+                    <input type="text" placeholder="Search All">
+                    <i class="search icon"></i>
+                </div>
+            </div>
         </div>
         <div class="title" id="addOutput">
             <i class="dropdown icon"></i>
@@ -81,14 +86,23 @@
     </div>
     <div class="item littlelogic">
         <img class="ui small image element" name="logic" src="../static/images/logic/and-gate.png"><span class="ui-icon ui-icon-close delete" role="presentation">Remove</span>
-    </div>
+    </div> 
     <div class="item biobrick">
-        <img class="ui small image element">
-        XXXXX
+        <div class="ui segment left">
+            <div class="ui bottom attached label">input</div>
+            <img class="ui small image element">
+        </div>
+        <div class="ui segment right">
+            <div class="ui ribbon label">Part_id</div>
+            <p>hehe</p>
+            <div class="ui ribbon label">Part_short_name</div>
+            <p>hehe</p>
+            <div class="ui ribbon label">Part_short_desc</div>
+            <p>hehe</p>
+        </div>
     </div>
     <div class="item input">
-        <img class="ui small image element" name="input" src="../static/images/circuit/input.png">
-        XXXXX
+        <img class="ui small image element" name="input" src="../static/images/circuit/input.png"> 
     </div>
     <div class="item output" name="output">
         <img class="ui small image element" name="input" src="../static/images/circuit/output.png">
