--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -148,21 +148,20 @@
         <div class="ui button">OK</div>
     </div>
     </div-->
-    <!--div class="ui small modal frame">
-    <i class="close icon"></i>
-    <div class="header">
-        Design Frames
+    <div class="ui step"></div>
+    <div class="ui basic modal frame" id="recommend">
+        <i class="close icon"></i>
+        <div class="header">
+            Recommend
+        </div>
+        <div class="ui small steps" id="logic-steps">
+        </div>
+        <div class="ui items" id="recommendlogics">
+        </div>
+        <div class="actions">
+            <div class="ui button">Confirm</div>
+        </div>
     </div>
-    <ol class="content ui vertical menu"> 
-        <li class="ui-widget-content item">And</li>
-        <li class="ui-widget-content item">OR</li>
-        <li class="ui-widget-content item">NAND</li>
-    </ol>
-    <div class="actions">
-        <div class="ui button">Cancel</div>
-        <div class="ui button">Confirm</div>
-    </div>
-    </div-->
     <div class="ui slider checkbox truthele">
         <input type="checkbox" name="truth"><label></label>
     </div>
