--- a/server/static/css/simulation.css
+++ b/server/static/css/simulation.css
@@ -1,67 +1,125 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 #simulation_wrap {
   width: 100%;
   height: 100%;
 }
 
-#simulation_graph, #Static_Performance,
-#Dynamic_Performance, #Expression_Efficiency {
+#simulation_draw {
+  height: 60%;
   width: 100%;
-  overflow: hidden;
 }
 
-.simulation_input {
-  width: 50%;
-  float: left;
+#simulation_adjust {
+  height: 40%;
+  width: 100%;
 }
 
-.simulation_input h2 {
-  width: 80%;
-  margin: auto;
+#simulation_draw .ui.teal.inverted.menu {
+  width: 165px;
 }
 
-#Static_Performance {
-  display: block;
+#simulation_main_draw {
+  width: 100%;
 }
 
-#Dynamic_Performance, #Expression_Efficiency {
+#simulation_main_draw>div {
+  width: 100%;
+}
+
+#Dynamic {
   display: none;
 }
 
-.main_graph {
+#simulation_circuit {
+  height: 100%;
+  width: 40%;
+  float: left;
+}
+
+#simulation_circuit .ui.teal.inverted.menu {
+  width: 255px;
+}
+
+#simulation_adjust_main {
+  height: 100%;
+  width: 60%;
+  float: left;
+}
+
+#simulation_adjust_main table {
   width: 80%;
+  height: 80%;
+}
+
+#simulation_adjust_main tr {
+  width: 100%;
+}
+
+#simulation_adjust_main th {
+  text-align: center;
+}
+
+#simulation_adjust_main th:first-child {
+  width: 80%;
+}
+
+.part {
+  float: left;
+  margin-right: 10%;
+  text-align: center;
+  position: relative;
+  left: 0; top: 0;
+}
+
+.part_img {
+  width: 60px;
+  height: 60px;
+  background-color: skyblue;
+  margin-bottom: 5%;
+}
+
+.part p {
+  border: 1px solid black;
+}
+
+.part_line {
+  width: 100%;
+}
+
+.part_line td:first-child {
+  width: 80%;
+}
+
+.mid_line {
+  height: 5px;
+  width: 79%;
+  background-color: gray;
+  position: relative;
+  left: 0;
+  top: 35px;
+}
+
+.static_box {
+  float: left;
+  width: 40%;
+  margin: 0 5% 0 5%;
+  padding:  auto;
+}
+
+.dynamic_box {
+  width:  70%;
   margin: auto;
 }
 
-#Dynamic_Performance select {
-  width: 10%;
-  margin: 1% 45% 1% 45%;;
+.adjust_box {
+  border: 1px solid gray;
+  text-align: center;
 }
 
-#expression_efficiency_main {
-  width: 100%;
-  overflow: hidden;
-}
-
-#expression_efficiency_graph {
-  width: 50%;
-  float: left;
-}
-
-#adjust_param {
-  width: 50%;
-  float: left;
-  overflow: hidden;
-}
-
-.adjust_param_item {
-  width: 30%;
-  margin: 2px;
-  border: 1px gray dashed;
-  float: left;
-}
-
-#components_link {
-  width: 90%;
-  border: 1px gray dashed;
-  height: 100px;
+.adjust_box th {
+  font-size: 10px;
 }
