--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -2,9 +2,10 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 750px;
+  height: 780px;
   font-family: Arial, '宋体';
   /*font-size: 14px;*/
+  background-image:-webkit-linear-gradient(top left, black, gray, rgb(142, 110, 110));
 }
 
 a {
@@ -54,6 +55,7 @@ a {
 	height: 87%;
     margin: 1% 0 .5% 0;
     top:10%;
+    background:none;
 }
 .input .popup{
 	color: red;
@@ -184,7 +186,7 @@ a {
 }
 
 .main {
-	background: #eee;
+	background: none;
     height: 100%;
     width: 95%;
     margin:0 auto;
